{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 98,
  "lineage": "7ebaab6f-2841-0c57-e4cc-37641ad810e1",
  "resources": [
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.238.31.229",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-01-26T23:20:17.658-08:00",
            "id": "projects/grand-signifier-282707/regions/us-central1/addresses/ipv4-address1",
            "name": "ipv4-address1",
            "network_tier": "PREMIUM",
            "project": "grand-signifier-282707",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/regions/us-central1/addresses/ipv4-address1"
          }
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "104.197.226.183",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-01-26T23:20:17.652-08:00",
            "id": "projects/grand-signifier-282707/regions/us-central1/addresses/ipv4-address2",
            "name": "ipv4-address2",
            "network_tier": "PREMIUM",
            "project": "grand-signifier-282707",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/regions/us-central1/addresses/ipv4-address2"
          }
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_db",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-01-26T23:20:27.466-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/grand-signifier-282707/global/firewalls/allow-tcp-sql",
            "log_config": [],
            "name": "allow-tcp-sql",
            "network": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/global/networks/vpc-network",
            "priority": 1000,
            "project": "grand-signifier-282707",
            "self_link": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/global/firewalls/allow-tcp-sql",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "wordpress"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "db"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_wordpress",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-01-26T23:20:27.605-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/grand-signifier-282707/global/firewalls/allow-tcp",
            "log_config": [],
            "name": "allow-tcp",
            "network": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/global/networks/vpc-network",
            "priority": 1000,
            "project": "grand-signifier-282707",
            "self_link": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/global/firewalls/allow-tcp",
            "source_ranges": [
              "103.204.170.238/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "wordpress"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db_instance1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210122",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/zones/us-central1-b/disks/database"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "desired_status": "RUNNING",
            "enable_display": false,
            "id": "projects/grand-signifier-282707/zones/us-central1-b/instances/database",
            "instance_id": "4461211292656249525",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "pCwXPbOUKPM=",
            "name": "database",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/global/networks/vpc-network",
                "network_ip": "10.3.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/regions/us-central1/subnetworks/db-subnet1",
                "subnetwork_project": "grand-signifier-282707"
              }
            ],
            "project": "grand-signifier-282707",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/zones/us-central1-b/instances/database",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "db"
            ],
            "tags_fingerprint": "iLlpKeTIHqY=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "instance1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210122",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/zones/us-central1-a/disks/php1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "desired_status": "RUNNING",
            "enable_display": false,
            "id": "projects/grand-signifier-282707/zones/us-central1-a/instances/php1",
            "instance_id": "7098942432174975669",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "bGVdPLNYU8M=",
            "metadata_startup_script": "yum install httpd php -y ; echo Hello PHP \u003e /var/www/html/index.php ; systemctl start httpd",
            "name": "php1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.238.31.229",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/global/networks/vpc-network",
                "network_ip": "10.2.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/regions/us-central1/subnetworks/app-subnet1",
                "subnetwork_project": "grand-signifier-282707"
              }
            ],
            "project": "grand-signifier-282707",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/zones/us-central1-a/instances/php1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "wordpress"
            ],
            "tags_fingerprint": "AG-OvsszYew=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.instances.google_compute_address.static1",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "instance2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210122",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/zones/us-central1-a/disks/php2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "desired_status": "RUNNING",
            "enable_display": false,
            "id": "projects/grand-signifier-282707/zones/us-central1-a/instances/php2",
            "instance_id": "7498885302832638645",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "bGVdPLNYU8M=",
            "metadata_startup_script": "yum install httpd php -y ; echo Hello PHP \u003e /var/www/html/index.php ; systemctl start httpd",
            "name": "php2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.197.226.183",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/global/networks/vpc-network",
                "network_ip": "10.2.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/regions/us-central1/subnetworks/app-subnet1",
                "subnetwork_project": "grand-signifier-282707"
              }
            ],
            "project": "grand-signifier-282707",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/zones/us-central1-a/instances/php2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "wordpress"
            ],
            "tags_fingerprint": "AG-OvsszYew=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.instances.google_compute_address.static2",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/grand-signifier-282707/global/networks/vpc-network",
            "mtu": 1500,
            "name": "vpc-network",
            "project": "grand-signifier-282707",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/global/networks/vpc-network"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514
              }
            ],
            "creation_timestamp": "2021-01-26T23:20:57.429-08:00",
            "id": "projects/grand-signifier-282707/regions/us-central1/routers/my-router",
            "name": "my-router",
            "network": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/global/networks/vpc-network",
            "project": "grand-signifier-282707",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/regions/us-central1/routers/my-router"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "grand-signifier-282707/us-central1/my-router/my-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "grand-signifier-282707",
            "region": "us-central1",
            "router": "my-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_router.router",
            "module.network.google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-01-26T23:20:32.747-08:00",
            "gateway_address": "10.3.0.1",
            "id": "projects/grand-signifier-282707/regions/us-central1/subnetworks/db-subnet1",
            "ip_cidr_range": "10.3.0.0/16",
            "name": "db-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/global/networks/vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "grand-signifier-282707",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/regions/us-central1/subnetworks/db-subnet1"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-01-26T23:20:33.550-08:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/grand-signifier-282707/regions/us-central1/subnetworks/app-subnet1",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "app-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/global/networks/vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "grand-signifier-282707",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/grand-signifier-282707/regions/us-central1/subnetworks/app-subnet1"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}